updated media gallery

--- a/index.html
+++ b/index.html
@@ -60,6 +60,45 @@
     -->
     <main>
 
+
+              <div class="site-title">karlsune's vibe coded portfolio site.</div>
+        <div class="site-subtitle" id="site-subtitle" aria-live="polite">
+          web developer
+        </div>
+
+              <!-- Emote Gallery -->
+      <section id="emote-gallery">
+        <h2>#emotes</h2>
+        <div class="emote-grid">
+          <img src="./icon/11235927_1573001056292964_550819561_n.webp" alt="emote" />
+          <img src="./icon/506652294229f.png" alt="emote" />
+          <img src="./icon/5164c87bf0f7d.gif" alt="emote" />
+          <img src="./icon/6679a4ec420fb.png" alt="emote" />
+          <img src="./icon/67155a2beb4d3.png" alt="emote" />
+          <img src="./icon/6780258063f32.jpg" alt="emote" />
+          <img src="./icon/67c25cdab104c.png" alt="emote" />
+          <img src="./icon/67f2afd9ef0c2.gif" alt="emote" />
+          <img src="./icon/681d3489a52a9.gif" alt="emote" />
+          <img src="./icon/683316b7f00d5.png" alt="emote" />
+          <img src="./icon/68624f2aca14a.gif" alt="emote" />
+          <img src="./icon/6871ed4608cb3.png" alt="emote" />
+          <img src="./icon/a5188b3d057996282432f6f7bd73b580-2306545682.jpg" alt="emote" />
+          <img src="./icon/channelpoint.png" alt="emote" />
+          <img src="./icon/despairge.png" alt="emote" />
+          <img src="./icon/e06b65c8b078ac9af14507e12b9a3d4a.png" alt="emote" />
+          <img src="./icon/example.png" alt="emote" />
+          <img src="./icon/ff0e34c49b08c9637297e4ef6eebdf4b-2678976422.jpg" alt="emote" />
+          <img src="./icon/goose.png" alt="emote" />
+          <img src="./icon/goose2.png" alt="emote" />
+          <img src="./icon/icon.gif" alt="emote" />
+          <img src="./icon/icon2.png" alt="emote" />
+          <img src="./icon/karlsunesmugcompressed.png" alt="emote" />
+          <img src="./icon/poggers.png" alt="emote" />
+          <!-- Add more as needed -->
+        </div>
+      </section>
+
+      
           <!-- Add a placeholder for the Twitch embed -->
       <div id="twitch-embed"></div>
 
@@ -75,10 +114,7 @@
       });
       </script>
 
-        <div class="site-title">karlsune's vibe coded portfolio site.</div>
-        <div class="site-subtitle" id="site-subtitle" aria-live="polite">
-          web developer
-        </div>
+
 
       <!--
         GitHub Profile Stats Embed:
