feat: add Twitch embed section with JavaScript integration for live streaming

--- a/index.html
+++ b/index.html
@@ -98,21 +98,9 @@
         </div>
       </section>
 
-      
-          <!-- Add a placeholder for the Twitch embed -->
-      <div id="twitch-embed"></div>
 
-      <!-- Load the Twitch embed JavaScript file -->
-      <script src="https://embed.twitch.tv/embed/v1.js"></script>
-       <script type="text/javascript">
-      new Twitch.Embed("twitch-embed", {
-        width: 854,
-        height: 480,
-        channel: "karlsune",
-        // Only needed if this page is going to be embedded on other websites
-        parent: ["embed.example.com", "othersite.example.com"]
-      });
-      </script>
+
+
 
 
 
@@ -274,6 +262,22 @@
         </p>
         <p>more to come!</p>
       </section>
+        <div id="twitch-embed">
+            <h2>"twitch embedded"</h2>
+
+        <!-- Load the Twitch embed JavaScript file -->
+        <script src="https://embed.twitch.tv/embed/v1.js"></script>
+        <script type="text/javascript">
+        new Twitch.Embed("twitch-embed", {
+          width: 854,
+          height: 480,
+          channel: "karlsune",
+          // Only needed if this page is going to be embedded on other websites
+          parent: ["embed.example.com", "othersite.example.com"]
+        });
+        </script>
+      </div>
+
     </main>
 
     <!--
