update education section

--- a/index.html
+++ b/index.html
@@ -87,13 +87,19 @@
         <main>
             <section id="about">
                 <h2>#about</h2>
-                <p>name: Karl Sune</p>
+                <p>name: Karl S</p>
                 <p>age: 26</p>
             </section>
 
             <section id="education">
                 <h2>#education</h2>
-                <p>graduated high school 2019</p>
+                <p>graduated high school - 2019</p>
+                <p>attended karolinska institute - 2020</p>
+                <p>attended stockholm university - 2023</p>
+                <p>attended luleå technical university - 2023</p>
+                <p>attended KTH royal institute of technology - 2025</p>
+
+
             </section>
 
             <section id="occupation">
