--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
-            padding: 2rem 0;
+            padding: 0.5rem;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
